fix broken styles for titles on two pages

--- a/src/Styles/Global.scss
+++ b/src/Styles/Global.scss
@@ -23,8 +23,9 @@
 }
 
 .body {
-    margin-top: 10px;
+    margin-top: 1rem;
     margin-left: 10px;
+    margin-bottom: .5rem;
 }
 
 .widgetBox {
@@ -90,4 +91,34 @@
 .car__card__items {
     padding-left: 1rem;
     padding-bottom: .6rem;
+}
+
+.navbar {
+    padding: .5rem, .5rem, .25rem, .5rem;
+    margin-right: .5rem;
+}
+
+.navbar__item {
+    margin: .5rem;
+}
+
+.application__title {
+    margin: 0;
+    font-family: Noto Sans;
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 1.334;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: inherit;
+    margin-right: 2px;
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    -webkit-text-decoration: none;
+    text-decoration: none;
 }
